--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
         font-family: Roboto;
         background: #ffffff;
         margin: 0;
+        color: #49585B;
       }
       #root,
       body,  
@@ -32,6 +33,7 @@
       .leaflet-container {
         height: 100%;
         width: 100%;
+        z-index: 1;
 }
     </style>
   </head>
