--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');
       body {
         font-family: Roboto;
-        background: #ffffff;
+        background: #f5f6f6;
         margin: 0;
         color: #49585B;
       }
@@ -35,7 +35,14 @@
         width: 100%;
         z-index: 1;
         background-color: #d5e8eb;
-}
+        }
+        * {
+          box-sizing: border-box;
+        }
+        h2 {
+          text-align: center;
+          font-weight: lighter;
+        }
     </style>
   </head>
   <body>
